kubernetes/plex/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: plex
  labels:
    goldilocks.fairwinds.com/enabled: "true"
